--- a/templates/index.html
+++ b/templates/index.html
@@ -1,52 +1,19 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<meta charset="utf-8">
-	<title>{% block title %}HWCheck{% endblock %}</title>
+<meta charset="utf-8">
+<title>{% block title %}HWCheck{% endblock %}</title>
+{% load static %}
+<link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
 </head>
-<style type="text/css">
 
-.top{
-	padding-right:10px;
-	padding-top: 10px;
-	padding-left: 10px;
-}	
-.sidenav {
-    height: 100%;
-    width: 160px;
-    position: fixed;
-    z-index: 1;
-    top: 0;
-    left: 0;
-    background-color: #111;
-    overflow-x: hidden;
-    padding-top: 20px;
-  }
-.sidenav a {
-    padding: 6px 8px 6px 16px;
-    text-decoration: none;
-    font-size: 25px;
-    color: #818181;
-    display: block;
-  }
-  
-.sidenav a:hover {
-    color: #f1f1f1;
-  }
-  .main {
-    margin-left: 160px; 
-    font-size: 28px; 
-    padding: 0px 10px;
-  }
-
-</style>
 <body>
 <div class="sidenav">
 		
 	<a href="/">Home</a>
 	<a href="/show_hw">HW list</a>
-	<a href="/create">Create HW</a>
-	<a href="/log_in">Log in</a>
+	<a href="#">Create HW</a>
+	<a href="#">Log in</a>
 	<a href="/admin">Admin</a>
 
 </div>
@@ -56,5 +23,6 @@
 	
 {% endblock %}
 </div>
+<script type="text/javascript" src="{% static 'js/scripts.js' %}"></script>
 </body>
 </html>
