--- a/templates/index.html
+++ b/templates/index.html
@@ -2,6 +2,8 @@
 <html>
 <head>
 <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/css/bootstrap.min.css" rel="stylesheet">
 <title>{% block title %}HWCheck{% endblock %}</title>
 {% load static %}
 <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
