--- a/templates/show_hw.html
+++ b/templates/show_hw.html
@@ -3,14 +3,23 @@
 
 {% block content %}
 
-{% for i in hw_objects %}
-
 <div class="panel">
-	<p>{{ i.HW_name }}</p>
-	<p>{{ i.HW_info }}</p>
-</div>
-
+	<table>
+		<tr>
+			<th>Name</th>
+			<th>Course</th>
+			<th>Info</th>
+		</tr>
+{% for i in hw_objects %}
+		<tr>
+			<td>{{ i.HW_name }}</td>
+			<td>{{ i.HW_course }}</td>
+			<td>{{ i.HW_info }}</td>
+		</tr>
 {% endfor %}
+	</table>
+
+</div>
 
 <button class="open-button" onclick="openForm()">Open Form</button>
 <div class="form-popup" id="myForm">
