--- a/static/css/style.css
+++ b/static/css/style.css
@@ -12,10 +12,17 @@ table {
 th, td {
   text-align: left;
   padding: 18px;
+  
 }
 
 tr:nth-child(even) {
   background-color: #f2f2f2;
+  
+}
+
+.log{
+  font-size: 16px;
+  padding: 5px;
 }
 .top{
 	padding-right:10px;
@@ -23,34 +30,33 @@ tr:nth-child(even) {
 	padding-left: 10px;
 }	
 .sidenav {
-    height: 100%;
-    width: 160px;
-    position: fixed;
-    z-index: 1;
-    top: 0;
-    left: 0;
-    background-color: #111;
-    overflow-x: hidden;
-    padding-top: 20px;
+  height: 100%;
+  width: 160px;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  background-color: #111;
+  overflow-x: hidden;
+  padding-top: 20px;
   }
 .sidenav a {
-    padding: 6px 8px 6px 16px;
-    text-decoration: none;
-    font-size: 25px;
-    color: #818181;
-    display: block;
+  padding: 6px 8px 6px 16px;
+  text-decoration: none;
+  font-size: 25px;
+  color: #818181;
+  display: block;
   }
   
 .sidenav a:hover {
-    color: #f1f1f1;
-  }
-  .main {
-    margin-left: 160px; 
-    font-size: 28px; 
-    padding: 0px 10px;
+  color: #f1f1f1;
   }
   
-
+.main {
+  margin-left: 160px; 
+  font-size: 16px; 
+  padding: 0px 10px;
+}
 
 /* Button used to open the contact form - fixed at the bottom of the page */
 .open-button {
