--- a/templates/index.html
+++ b/templates/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="utf-8">
+	{% load static %}
+	<meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/css/bootstrap.min.css" rel="stylesheet">
-<title>{% block title %}HWCheck{% endblock %}</title>
-{% load static %}
-<link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
+	<title>{% block title %}HWCheck{% endblock %}</title>
 </head>
 
 <body>
@@ -14,11 +14,14 @@
 		
 	<a href="/">Home</a>
 	<a href="/show_hw">HW list</a>
-	<a href="#">Create HW</a>
-	<a href="#">Log in</a>
 	<a href="/admin">Admin</a>
-
+	<p>
+	<p>
+	<a href="/log_in">Log in</a>
+	<a href="/registration">Sign in</a>
+	
 </div>
+
 <div class="main">
 {% block content %}
 	<h1>This render is working!!!</h1>
