--- a/static/css/style.css
+++ b/static/css/style.css
@@ -19,7 +19,9 @@ tr:nth-child(even) {
   background-color: #f2f2f2;
   
 }
-
+.create-course{
+  margin: 20px 20px 20px 20px;
+}
 .log{
   font-size: 16px;
   padding: 5px;
