--- a/templates/home.html
+++ b/templates/home.html
@@ -2,4 +2,6 @@
 {% block title %}Home page{% endblock %}
 
 {% block content %}
+<h2>Hello {{ request.user.username }}</h2><p>
+<h2>This render is working!!!</h2>
 {% endblock %}
