--- a/templates/home.html
+++ b/templates/home.html
@@ -3,5 +3,9 @@
 
 {% block content %}
 <h2>Hello {{ request.user.username }}</h2><p>
-<h2>This render is working!!!</h2>
+<content>
+	This application builded to help user to manage and control<p>
+	homeworks(HW). To see and create HW follow to "HW list".<p>
+	To see and create courses follow to "Courses".
+</content>
 {% endblock %}
