--- a/templates/index.html
+++ b/templates/index.html
@@ -1,33 +1,34 @@
 <!DOCTYPE html>
 <html>
 <head>
-	{% load static %}
-	<meta charset="utf-8">
+  {% load static %}
+  <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/css/bootstrap.min.css" rel="stylesheet">
-	<title>{% block title %}HWCheck{% endblock %}</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <title>{% block title %}HWCheck{% endblock %}</title>
 </head>
 
+
+
 <body>
-<div class="sidenav">
-	
-	{% if user.is_staff %}
-	<a href="/admin">Admin</a>
-	{% endif %}
-	{% if user.is_authenticated %}	
-	<a href="/">Home</a>
-	<a href="/show_hw">HW list</a>
-	
-	<a href="/create_course">Create course</a>
-	<p>
-	<p>
-	<a href="/log_out">Log out</a>
-	{% else %}
-	<a href="/log_in">Log in</a>
-	<a href="/registration">Sign in</a>	
-	{% endif %}
-</div>
+	<div class="topnav" id="myTopnav">
+ 		{% if user.is_staff %}
+		<a href="/admin">Admin</a>
+		{% endif %}
+		{% if user.is_authenticated %}
+ 		<a href="/">Home</a>
+		<a href="/show_hw">HW list</a>
+		<a href="/create_course">Create course</a>
+		<a href="/log_out">Log out</a>
+		{% else %}
+		<a href="/log_in">Log in</a>
+		<a href="/registration">Sign in</a>	
+		{% endif %}
+		<a href="javascript:void(0);" class="icon" onclick="myFunction()">
+		<i class="fa fa-bars"></i></a>
+	</div>
 
 <div class="main">
 {% block content %}	
