--- a/static/css/style.css
+++ b/static/css/style.css
@@ -22,6 +22,7 @@ tr:nth-child(even) {
 .topnav {
   background-color: #333;
   overflow: hidden;
+  text-align: center;
 }
 
 /* Style the links inside the navigation bar */
