--- a/templates/create_course.html
+++ b/templates/create_course.html
@@ -1,11 +1,12 @@
 {% extends 'index.html'%}
 {% block title %}Home page{% endblock %}
 {% block content %}
+{% load crispy_forms_tags %}
 <div class="">
 	<form method="post">
 
 		{% csrf_token %}
-		{{ form.as_p }}
+		{{ form|crispy }}
 		<button type="submit">Create</button>
 		
 	</form><p>
