--- a/templates/crud_delete.html
+++ b/templates/crud_delete.html
@@ -5,7 +5,7 @@
 <form method="post">
 
 	{% csrf_token %}
-	{{ form }}
+	{{ form|crispy }}
 	<h2>Are you sure you want to delete this {{ object }}?</h2>
 	<input type="submit" name="" value="Yes">
 
