--- a/hwcheck/templates/crud_delete.html
+++ b/hwcheck/templates/crud_delete.html
@@ -1,12 +1,12 @@
 {% extends 'index.html' %}
 {% block title %}Delete HomeWork{% endblock %}
-
 {% block content %}
+{% load crispy_forms_tags %}
 <form method="post">
 
 	{% csrf_token %}
 	{{ form|crispy }}
-	<h2>Are you sure you want to delete this {{ object }}?</h2>
+	<h3>Are you sure you want to delete this {{ object }}?</h3>
 	<input type="submit" name="" value="Yes">
 
 </form>
