--- a/hwcheck/templates/registration.html
+++ b/hwcheck/templates/registration.html
@@ -1,11 +1,12 @@
 {% extends 'index.html' %}
 {% block title %} Registration of user {% endblock %}
 {% block content %}
+{% load crispy_forms_tags %}
 
 <form method="post">
 	
 	{% csrf_token %}
-	{{ form.as_p }}
+	{{ form|crispy }}
 	
 	<input type="submit" value="Register">
 
