--- a/hwcheck/static/css/style.css
+++ b/hwcheck/static/css/style.css
@@ -85,9 +85,10 @@ tr:nth-child(even) {
   padding: 5px;
 }
 .main {
-  margin-left: 15%;
   font-size: 16px;
-  padding-top: 30px; 
+  padding-top: 30px;
+  width: 70%;
+  margin: auto; 
   
 }
 
