--- a/hwcheck/templates/crud_delete.html
+++ b/hwcheck/templates/crud_delete.html
@@ -1,4 +1,4 @@
-{% extends 'index.html' %}
+{% extends 'base.html' %}
 {% block title %}Delete HomeWork{% endblock %}
 {% block content %}
 {% load crispy_forms_tags %}
