--- a/hwcheck/templates/index.html
+++ b/hwcheck/templates/index.html
@@ -1,41 +1,11 @@
-<!DOCTYPE html>
-<html>
-<head>
-  {% load static %}
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
-  <title>{% block title %}HWCheck{% endblock %}</title>
-</head>
+{% extends 'base.html'%}
+{% block title %}Home page{% endblock %}
 
-
-
-<body>
-	<div class="topnav" id="myTopnav">
-		{% if user.is_authenticated %}
- 		{% if user.is_staff %}
-			<a href="/admin">Admin</a>
-		{% endif %}
- 			<a href="/">Home</a>
-			<a href="/show_hw">HW list</a>
-			<a href="/create_course">Create course</a>
-			<a class="topleft" href="/log_out">Log out</a>
-		{% else %}
-			<a class="topleft" href="/log_in">Log in</a>
-			<a class="topleft" href="/registration">Sign in</a>	
-		{% endif %}
-			<a href="javascript:void(0);" class="icon" onclick="myFunction()">
-			<i class="fa fa-bars"></i></a>
-		
-	</div>
-
-<div class="main">
 {% block content %}
+<h2>Hello {{ request.user.username }}</h2><p>
+<content>
+	This application builded to help user to manage and control<p>
+	homeworks(HW). To see and create HW follow to "HW list".<p>
+	To see and create courses follow to "Courses".
+</content>
 {% endblock %}
-</div>
-<script type="text/javascript" src="{% static 'js/scripts.js' %}"></script>
-</body>
-</html>
