--- a/hwcheck/templates/log_in.html
+++ b/hwcheck/templates/log_in.html
@@ -1,4 +1,4 @@
-{% extends 'index.html'%}
+{% extends 'base.html'%}
 {% block title %}Home page{% endblock %}
 {% block content %}
 <style>
@@ -10,14 +10,15 @@ body {
 /* style the container */
 .container {
   position: relative;
+  width: 70%;
   border-radius: 5px;
   background-color: #f2f2f2;
-  padding: 20px 0 30px 0;
 } 
 
 /* style inputs and link buttons */
 .input-cls,
 .btn {
+  max-width: 12em;
   width: 100%;
   padding: 12px;
   border: none;
@@ -46,20 +47,13 @@ body {
   background-color: #45a049;
 }
 
-/* Two-column layout */
-.col {
-  float: left;
-  width: 50%;
-  margin: auto;
-  padding: 0 50px;
-  margin-top: 6px;
-}
 .col-1 {
   float: center;
   width: 50%;
   margin: auto;
   padding: 0 50px;
-  margin-top: 6px;
+  margin-top: 10px;
+  margin-bottom: 30px;
 }
 /* Clear floats after the columns */
 .row:after {
@@ -68,6 +62,9 @@ body {
   clear: both;
 }
 
+.top-text {
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
 
 /* hide some text on medium and large screens */
@@ -76,17 +73,13 @@ body {
 }
 
 /* bottom container */
-.bottom-container {
-  text-align: center;
-  background-color: #666;
-  border-radius: 0px 0px 4px 4px;
-}
+
 
 /* Responsive layout - when the screen is less than 650px wide, make the two columns stack on top of each other instead of next to each other */
-@media screen and (max-width: 650px) {
-  .col {
+@media screen and (max-width: 600px) {
+  .col-1 {
     width: 100%;
-    margin-top: 0;
+    padding: auto;
   }
 
 }
@@ -94,36 +87,20 @@ body {
 </head>
 <body>
 <div class="container">
-  <form action="/action_page.php">
+  <form method="post">
+    {% csrf_token %}
     <div class="row">
-      <h2 style="text-align:center">Login to enter to the application</h2>
+      <h2 class="top-text" style="text-align:center">Login to enter to the application</h2>
       <div class="col-1">
-        <input class="input-cls" type="text" name="username" placeholder="Username" required>
-        <input class="input-cls" type="password" name="password" placeholder="Password" required>
+        <input class="input-cls" type="text" name="username" placeholder="Username" required><br>
+        <input class="input-cls" type="password" name="password" placeholder="Password" required><br>
         <input class="input-cls" type="submit" value="Login">
+        <a href="#" style="color:#ffffff;background-color:#212529 ;" class="btn">Forgot password?</a>
       </div>
       
     </div>
   </form>
 </div>
 
-<div class="bottom-container">
-  <div class="row">
-    <div class="col">
-      <a href="#" style="color:white" class="btn">Sign up</a>
-    </div>
-    <div class="col">
-      <a href="#" style="color:white" class="btn">Forgot password?</a>
-    </div>
-  </div>
-</div>
 
-<form method="post">
-
-	{% csrf_token %}
-	<input class="input-cls" type="text" name="username" placeholder="Username" required>
-	<input class="input-cls" type="password" name="password" placeholder="Password" required>
-	<input class="input-cls" type="submit" value="Login">
-
-</form>
 {% endblock %}
