--- a/hwcheck/templates/registration.html
+++ b/hwcheck/templates/registration.html
@@ -1,4 +1,4 @@
-{% extends 'index.html' %}
+{% extends 'base.html' %}
 {% block title %} Registration of user {% endblock %}
 {% block content %}
 {% load crispy_forms_tags %}
