--- a/hwcheck/templates/create_course.html
+++ b/hwcheck/templates/create_course.html
@@ -7,7 +7,8 @@
 
 		{% csrf_token %}
 		{{ form|crispy }}
-		<button type="submit">Create</button>
+		<br>
+		<button class="btn btn-primary" type="submit">Create</button>
 		
 	</form><p>
 </div>
