--- a/hwcheck/templates/crud_delete.html
+++ b/hwcheck/templates/crud_delete.html
@@ -7,7 +7,7 @@
 	{% csrf_token %}
 	{{ form|crispy }}
 	<h3>Are you sure you want to delete this {{ object }}?</h3>
-	<input type="submit" name="" value="Yes">
+	<input class="btn btn-secondary" type="submit" name="" value="Yes">
 
 </form>
 
