--- a/hwcheck/templates/registration.html
+++ b/hwcheck/templates/registration.html
@@ -7,8 +7,7 @@
 	
 	{% csrf_token %}
 	{{ form|crispy }}
-	
-	<input type="submit" value="Register">
+	<input class="btn btn-primary" type="submit" value="Register">
 
 </form>
 
